<resources>
    <string name="app_name">ÆxÖn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="image">Image</string>
    <string name="create_btn">Create Account</string>
    <string name="url_label">URL:</string>
    <string name="key_label">Key:</string>
    <string name="submit_btn">Submit</string>
    <string name="change_btn">Change</string>
    <string name="delete_btn">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>