<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createaccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="100dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp"/>

        <EditText
            android:id="@+id/usernameCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="username"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/passwordCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints="password"
            android:hint="@string/password"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="130dp"
            android:layout_height="64dp"
            android:text="@string/create_btn" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>