<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".addVideoFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nameCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/url_label"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:labelFor="@id/nameInputCreate"/>

            <EditText
                android:id="@+id/nameInputCreate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/pathCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/key_label"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/pathInputCreate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:inputType="text"/>
        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn"/>

</LinearLayout>